Preventing download labels from wrapping (they're quite hard to read otherwise if the help text wraps)

--- a/Products/RhaptosContent/skins/rhaptos_content/stylesheets/plone/metacontent.css
+++ b/Products/RhaptosContent/skins/rhaptos_content/stylesheets/plone/metacontent.css
@@ -725,6 +725,10 @@ td, th{
   font-size: 1em;
 }
 
+#cnx_about_history td.cnx_before{
+  white-space: nowrap;
+}
+
 #cnx_about_history .cnx_name{
   font-weight: bold;
 }
